Fix 404 alignment

--- a/styles.css
+++ b/styles.css
@@ -616,10 +616,7 @@ nav {
 }
 
 .centered {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    height: 100%;
     text-align: center;
 }
 
